--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/bot.js"
+    "runforever": "forever src/bot.js"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
-    "nodemon": "^2.0.7",
-    "tedious": "^11.0.7"
+    "forever": "^3.0.4",
+    "nodemon": "^2.0.7"
   }
 }
